--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-dotenv": "^3.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
