--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
