--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Package-lock.json so we don't get merge conflicts
+package-lock.json
