--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-calendar": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-elements": "^3.4.3",
+    "react-native-permissions": "^3.8.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-elements": "^3.4.3",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-select-dropdown": "^3.3.3"
+    "react-native-select-dropdown": "^3.3.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
