--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-elements": "^3.4.3",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-elements": "^3.4.3",
-    "react-native-dotenv": "^3.4.8",
+    "react-native-select-dropdown": "^3.3.3",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-select-dropdown": "^3.3.3"
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
