--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -19,12 +20,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-elements": "^3.4.3",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-elements": "^3.4.3",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-select-dropdown": "^3.3.3"
+    "react-native-select-dropdown": "^3.3.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
