--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-maps": "1.3.2",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-vector-icons": "^9.2.0"
   },
