created add to calendar feature

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       [
         "expo-calendar",
         {
-          "calendarPermission": "The app needs to access your calendar."
+          "calendarPermission": "Denne app skal bruge tilladelse til din kalender"
         }
       ]
     ]
