--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -26,11 +27,11 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-maps": "1.3.2",
+    "react-native-permissions": "^3.8.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-select-dropdown": "^3.3.3",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-permissions": "^3.8.0"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
